fix(navbar): update icons for light/dark mode

--- a/src/styles/theme/_search.css
+++ b/src/styles/theme/_search.css
@@ -1,4 +1,4 @@
-.navbarSearchContainer_node_modules-\@docusaurus-theme-classic-lib-theme-Navbar-Search-styles-module {
+[class^='navbarSearchContainer'] {
   --ifm-navbar-item-padding-vertical: 0;
 }
 
@@ -22,11 +22,13 @@
   width: 2rem;
   height: 2rem;
   transition: none;
+  color: inherit;
 }
 .DocSearch.DocSearch-Button:hover {
   background: var(--ifm-menu-color-background-hover);
   box-shadow: none;
   outline: none;
+  color: var(--ifm-navbar-link-hover-color);
 }
 .DocSearch.DocSearch-Button:focus {
   box-shadow: none;
